@@ -791,7 +791,7 @@ sub return_to_other {
         qq{<script type="text/javascript" src="/media/js/prototype.js"></script>\n},
         qq{<script type="text/javascript" src="/media/js/scriptaculous.js"></script>\n},
         qq{<script type="text/javascript" src="/media/js/lib.js"></script>},
-        qq{<script type="text/javascript">Container.update('media', '$widget', '$prev->{elem_id}');</script>},
+        qq{<script type="text/javascript">Container.update('media', '$widget', '$prev->{elem_id}', true);</script>},
     );
     $self->abort;
 }
