@@ -268,6 +268,12 @@ Adding a contributor to a media document when creating the media document from
 a related media popup no longer mysteriously closes the related media popup
 window. Thanks to John Durkin for the spot (Bug #1431). [David]
 
+=item *
+
+When creating a new media document via the related media popup, the popup
+window now closes in Camino once the media document has been created and
+saved. [David]
+
 =back
 
 =head1 VERSION 1.11.1 (2008-10-03)
